feat(monster): create validation for image
